Styles/styles.css
body{
    margin: auto;   
    background: url("../beautiful_blossoms.jpg") 0px no-repeat fixed; 
    background-size: cover;
    display: flex;
    flex-wrap: wrap;
    
}

  .backgroundstyle{
    background-color: rgba(65, 11, 88, 0.548);
    height: 100%;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
}
.w3-content{
    margin: auto;
    /* display: flex;
    flex-wrap: wrap; */
}
@media (max-width: 300px){
    .w3-content{
        margin: auto;
        max-width: 300px;
        max-height: 500px;
    
    }
}
.w3-container{
    margin: auto;
    /* display: flex;
    flex-wrap: wrap; */
    
    
}
@media (max-width: 300px){
    .w3-container{
        margin: auto;
        max-width: 300px;
        max-height: 500px;
    
    }
}
h2{
    padding: 5px;
    font-family: 'Great Vibes', cursive;
    font-size: 4em;
    margin: auto;
    font-weight: 100;
 
    display: inline;
   
   
}

.mySlides{
    margin: auto;
    flex-wrap: wrap;
    
}
@media (max-width: 300px){
    .mySlides{
        margin: auto;
        max-width: 300px;
        max-height: 500px;
    
    }
}

img{
   clear: both;
    margin: auto;
    display: flex;
    flex-wrap: wrap;
    padding: 5px;
}

@media(max-width: 360px){
    img{
      width: 90vw;
      display: flex;
      flex-wrap: wrap;
      padding: 5px;
      max-height: 500px;
  }
  }



.w3-btn-floating.w3-hover-dark-grey{
    color: white;
    background-color: #575757;
    border-radius: 50%;
    font-size: 50px;
    padding: 5px 10px;
    margin: auto;
    /* display: flex;
    flex-wrap: wrap; */
}

:hover.w3-btn-floating.w3-hover-dark-grey{
    color: white;
    background-color: rgb(129, 128, 128); 
    cursor: pointer;
    /* display: flex;
    flex-wrap: wrap; */
    box-shadow: 0 0 13px 0px black;
}



footer{
    display: block;
    position: sticky;
    bottom: 0px;
    text-align: center;
    margin: auto;
    border: hidden;
    background-color: darkslategrey;
    /* border-radius: 5px; */
    padding: 5px 0 5px 0;
    width: 100%;
    color: white;
    overflow: hidden;
    z-index: 2;
}

